--- a/style.css
+++ b/style.css
@@ -357,9 +357,10 @@ div.grid-container   video{
   
   .product-card {
     flex: 0 0 auto;
-    width: 250px;
-    height: 500px;
-    margin-right: 40px;
+    width: 150px;
+    height: auto;
+    margin-right: 10px;
+    
   }
   
   .product-image {
@@ -367,7 +368,15 @@ div.grid-container   video{
     width: 100%;
     height: auto;
     overflow: hidden;
+    border-radius: 10px;
+
+    
   }
+
+
+
+
+
   
   .product-thumb {
     width: 100%;
@@ -391,7 +400,7 @@ div.grid-container   video{
     width: 5vw;
     height: 70%;
     position: absolute;
-    top: 0;
+    top: 8;
     display: flex;
     justify-content: center;
     align-items: center;
